resolved issue with Day Theme, adding NoActionBar

--- a/app/src/main/res/layout/activity_marketplace.xml
+++ b/app/src/main/res/layout/activity_marketplace.xml
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_margin="8dp"
-                    android:autofillHints=""
+                    android:autofillHints="false"
                     android:hint="@string/hint_itemTitle"
                     android:inputType="text"
                     android:maxLength="25"
@@ -59,6 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:autofillHints="false"
                     android:hint="@string/hint_itemDescription"
                     android:inputType="text"
                     android:maxLength="25"
