Added cancel item option and edit string for Snackbar

--- a/app/src/main/res/layout/card_marketplace.xml
+++ b/app/src/main/res/layout/card_marketplace.xml
@@ -27,5 +27,16 @@
             android:layout_below="@id/itemTitle"
             tools:text="A Description" />
 
+        <Button
+            android:id="@+id/menu_removeItem"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="132dp"
+            android:layout_marginEnd="17dp"
+            android:layout_toEndOf="@+id/itemTitle"
+            android:text="Remove"
+            android:textColorHighlight="@color/teal_700" />
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
