--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,17 +10,17 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="80dp"
         android:theme="@style/Theme.AppCompat.Light">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:fontFamily="sans-serif"
             android:text="@string/sign_in"
-            android:textSize="20sp"
             android:textColor="#000"
-            android:fontFamily="sans-serif" />
+            android:textSize="20sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
