--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,18 +10,20 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="419dp"
+        android:background="@color/white"
         android:theme="@style/Theme.AppCompat.Light">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="sans-serif"
-            android:text="@string/sign_in"
-            android:textColor="#000"
-            android:textSize="20sp" />
-
+        <ImageView
+            android:id="@+id/SplashScreenImage"
+            android:layout_width="400dp"
+            android:layout_height="300dp"
+            android:src="@drawable/background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background" />
     </androidx.appcompat.widget.Toolbar>
 
     <View
@@ -57,11 +59,11 @@
         android:layout_height="46dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimaryDark"
         android:text="@string/login"
         android:textAllCaps="false"
         android:layout_marginTop="14dp"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="18sp" />
 
     <TextView
@@ -82,5 +84,6 @@
         android:textSize="15sp"
         android:textStyle="bold"
         android:textAlignment="center"/>
+
 
 </LinearLayout>
