--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,25 +10,22 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="347dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/Theme.AppCompat.Light">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/sign_up"
-            android:textSize="20sp"
-            android:textColor="#000"
-            android:fontFamily="sans-serif" />
+        <ImageView
+            android:id="@+id/SplashScreenImage"
+            android:layout_width="400dp"
+            android:layout_height="300dp"
+            android:src="@drawable/background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background" />
 
     </androidx.appcompat.widget.Toolbar>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#c4c4c4" />
 
     <EditText
         android:id="@+id/etEmail"
@@ -69,7 +66,7 @@
         android:layout_height="46dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimary"
         android:text="@string/signup"
         android:textAllCaps="false"
         android:layout_marginTop="14dp"
@@ -90,7 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/click_here"
-        android:textColor="#fd7f7f"
+        android:textColor="#FD7F7F"
         android:textSize="15sp"
         android:textStyle="bold"
         android:textAlignment="center"/>
