--- a/app/src/main/res/layout/card_marketplace.xml
+++ b/app/src/main/res/layout/card_marketplace.xml
@@ -51,6 +51,18 @@
             app:layout_constraintTop_toBottomOf="@id/itemTitle"
             tools:text="A Description" />
 
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.052"
+            app:layout_constraintStart_toEndOf="@+id/imageIcon"
+            app:layout_constraintTop_toBottomOf="@id/description"
+            tools:text="Price" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
