--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/item_add"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/add"
         android:title="@string/menu_addItem"
         app:showAsAction="always" />
     <item
